--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </form>
 
     <p>
-      Don't have an account? <a href="/register">Register here</a>.
+      Don't have an account? <a href="/register.html">Register here</a>.
     </p>
-    
+
   </body>
 </html>
